# Tokamak-zk-EVM-contracts

./: .env.example  .gitattributes  .gitignore  .gitmodules  .tokamak-verifier-address  CHANGELOG.md  CLAUDE.md  FEATURE_SUMMARY.md  LICENSE  LICENSE-APACHE  MTManager.ts  README.md  RELEASING.md  RollupBridgeCore_Documentation.md  checklist.md  checklist_eng.md  deployments--sepolia-20251124-123152.json  deployments-sepolia-20251114-213358.json  deployments-sepolia-20251114-214315.json  deployments-sepolia-20251117-111045.json  deployments-sepolia-20251117-171109.json  deployments-sepolia-20251121-142807.json  deployments-sepolia-20251122-113857.json  deployments-sepolia-20251130-114641.json  deployments-sepolia-20251208-102028.json  deployments-sepolia-20260128-155621.json  foundry.toml  hardhat.config.ts  llms.txt  package-lock.json  package.json  submodule-interaction.md  temp.md  upgrades-sepolia-20251130-122349.json  upgrades-sepolia-20251214-162816.json  upgrades-sepolia-20251216-132848.json  upgrades-sepolia-20251224-110410.json  upgrades-sepolia-20251225-100808.json  upgrades-sepolia-20251226-171819.json  upgrades-sepolia-20251227-002820.json  (+11 more)
agents/: REPORTING.md
apps/: .env.template  README.md
bridge/: CHANGELOG.md  README.md  foundry.toml
docs/: CHANNEL_LIFECYCLE_SPECIFICATION.md  DISPUTE_SYSTEM.md  GROTH16_ANALYSIS.md  INTERNAL_AUDIT_GUIDE.md  MerkleTreeManager4.md  POSEIDON4_CIRCUIT_DESIGN.md  UUPS_UPGRADE_IMPLEMENTATION.md  audit-for-mainnet-deploy-second.md  index.md  spec.md  (+10 more)
script/zk/rkyv-to-json/: Cargo.toml
script/zk/rkyv-to-json/src/: main.rs
(+1277 files in other folders)
