[package]
name = "tokamak-rkyv-to-json"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
libs = { path = "../../../submodules/Tokamak-zk-EVM/packages/backend/libs" }
rkyv = { version = "0.7", features = ["alloc", "bytecheck", "validation"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
